# cognitive-orchestration-stack

./: .bandit  .flake8  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  DEVOPS_PLAN.md  LICENSE  MEMORY_VIRTUAL_ENVIRONMENT.md  PROJECT_PROGRESS.md  README.md  SEARCH_SETUP.md  SECURITY.md  TASK.md  TESTING_PLAN.md  chimera.bat  env.example  launch_tui.py  mypy.ini  pyproject.toml  requirements-e2e.txt  requirements.txt  test_results.txt
.cursor/rules/: 01-core-tech-stack.mdc  02-coding-standards.mdc  03-agent-protocol.mdc  04-testing-policy.mdc  05-ARIS-rules.mdc
.github/workflows/: test.yml
config/: dev.env.template
scratch/863dd63f-b33d-4cf9-ab91-2343c08f00f0/: https___www_python_org_.md  https___www_python_org_downloads_.md  https___www_python_org_downloads_release_python_3120_.md  https___www_python_org_downloads_release_python_3137_.md  https___www_python_org_downloads_windows_.md
scripts/: __init__.py  check_services.py  fix_line_length.py  ingest_data.py  run_all_tests.py  run_e2e_tests.py  setup_dev_env.py  verify_dev_env.py
src/: __init__.py  config.py  main.py
src/api/: __init__.py  docs.py  health.py  metrics.py  server.py
src/aris/: __init__.py
src/aris/agents/: __init__.py  scraper_agent.py  search_agent.py
src/aris/orchestration/: __init__.py  graph.py  nodes.py  state.py
src/orchestration/: __init__.py  graph.py  nodes.py  state.py
src/scripts/: run_aris_job.py
src/tools/: __init__.py  chromadb_agent.py  neo4j_agent.py
src/tui/: README.md  __init__.py  app.py  cos.tcss
src/tui/screens/: __init__.py  aris.py  base_screen.py  ingest.py  main_menu.py  query.py  status.py
src/tui/widgets/: __init__.py  clipboard_input.py
src/ui/: animations.py  components.py  focus.py  theme.py
src/utils/: logger.py  metrics.py  query_optimizer.py  retry.py  schema_validator.py
tests/: COS_full_test_documentation.md  README.md  conftest.py  test_api_health.py  test_api_metrics.py  test_config.py  test_config_vault.py  test_integration.py  test_logging_config.py  test_main.py  test_orchestration.py  test_orchestration_graph.py  test_orchestration_nodes.py  test_state.py  test_structured_logging.py  test_tools_chromadb.py  test_tools_neo4j.py  test_utils_metrics.py  test_utils_retry.py  test_utils_schema_validator.py
tests/debug_tests/: debug_imports.py  run_debug.bat  run_test.py  test_fix.py  test_minimal.py  test_no_graph.py  verify_fix.py
tests/e2e/: __init__.py  conftest.py  docker-compose.e2e.yml  performance_test.js  security_test.py  test_full_system.py
tests/unit/: test_api_layer.py  test_orchestration_graph.py  test_orchestration_nodes.py  test_utils.py
